--- a/_posts/2023-07-27-Whats_PQC.md
+++ b/_posts/2023-07-27-Whats_PQC.md
@@ -8,27 +8,27 @@ Post-Quantum Cryptography uses classical computing to protect data from the powe
 
 The Importance of Post-Quantum Cryptography:
 
-Quantum Threats Looming:
+1 - Quantum Threats Looming:
 
 It is only a matter of time before quantum computers disrupt the foundations of many modern encryption implementations. As quantum technology advances, it could unravel encryption used for protect financial transactions, sensitive communications, and critical infrastructure. PQC appears as one solution to secure our data against the quantum threat.
 
-Long-Term Security:
+2 - Long-Term Security:
 
 Cryptographic systems serve as the foundation of digital security for years, if not decades. The adopting of PQC ensures that sensitive data encrypted today will remain secure against potential quantum attacks in the future.
 
-Transitioning to Quantum-Resistant Systems:
+3 - Transitioning to Quantum-Resistant Systems:
 
 Moving from conventional cryptographic systems to quantum-resistant ones requires planning, testing and preparation for future fast changes. Different strategies to embrace PQC are proposed. Adopting it now by replacing existing crypto or adding it as an additional layer, both can ensure a smooth transition and a proactive stance against today's quantum adversaries. But we should be ready to replace these PQC algorithms in the future if necessary. Quantum computers are in their infancy and we could find flaws in our PQC algorithms later. Any PQC strategy should include the capabilities to ease this process and specifically a crypto agility framework.
 
-Industry and government adoption:
+4 - Industry and government adoption:
 
 As quantum computing takes steps to become a reality, industry and government agencies alike must prioritize the adoption of Post-Quantum Cryptography. PQC standards and protocols are already being developed to secure various applications.
 
-Protect the Sensitive Information:
+5 - Protect the Sensitive Information:
 
 Post-Quantum Cryptography plays a central role in protecting sensitive data, such as personal information, financial records, and classified communications. It guarantees the confidentiality, integrity, and authenticity of this critical information.
 
-Research and Innovation:
+6 - Research and Innovation:
 
 The study of Post-Quantum Cryptography has initiated a wave of innovation and research in mathematics, computer science, and information security. New cryptographic primitives and algorithms are continually being proposed and explored, expanding the boundaries of knowledge in these fields. The discoveries and news from these efforts will have an impact on much of the communications we have today.  
 
