--- a/_posts/2023-07-27-Whats_PQC.md
+++ b/_posts/2023-07-27-Whats_PQC.md
@@ -1,4 +1,4 @@
-What's Post-Quantum Cryptography? and why is it important?
+Title: What's Post-Quantum Cryptography? and why is it important?
 
 In our interconnected world, where data security is so relevant and necessary, the cryptographic algorithms play a crucial role in safeguarding sensitive information. However, the rapid development of quantum computing that pursues the potential quantum advantage poses a significant threat to conventional cryptographic techniques like RSA and ECC. To address this imminent challenge, researchers have proposed two different defensive plays. One provides protection using quantum mechanisms (highlighted here Quantum Key Distribution or QKD), the other seeks protection that improves classical computing (PQC). In this blog post, we'll dive into the realm of PQC, exploring its essence, meaning, and how it ensures our data remains secure throughout the quantum era.
 
